openshift/ingresscontroller/second/example-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  labels:
    app: example
  namespace: example
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: example
      image: 'image-registry.openshift-image-registry.svc:5000/openshift/httpd:latest'
      ports:
        - containerPort: 8080
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
