openshift/ingresscontroller/second/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  namespace: example
spec:
  selector:
    app: example
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
